# gerador_relatorio

./: .gitignore  LICENSE  Makefile  PROVA.md  README.md  UV_CHEATSHEET.md  app.py  do_csv.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  vendas_com_erros_v2.csv
.github/workflows/: python-app.yml
app/: core.py  csv.py  file.py  output.py  parser.py  run.py
tests/: test_app.py  test_app_main_entry.py  test_core_edges.py  test_csv.py  test_e2e_cli.py  test_file_extra.py  test_output.py  test_output_edges.py  test_parser.py  test_parser_cli.py  test_relatorio.py
