[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vendas-cli"
version = "1.0.0"
description = "CLI para gerar relatórios a partir de CSV de vendas"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Cesar Filho" }]
license = { file = "LICENSE" }
dependencies = [
  "tabulate>=0.9",
]

[project.scripts]
# expõe o comando de console
vendas-cli = "app.run:main"

[tool.uv]
# dependências de desenvolvimento instaláveis com: `uv sync --group test`

[dependency-groups]
# grupo para ferramentas de teste/desenvolvimento
test = [
  "pytest>=7",
  "pytest-cov>=7.0.0",
]
